# esp-who

components/who_app/who_recognition_app/: CMakeLists.txt  who_recognition_app_lcd.cpp  who_recognition_app_lcd.hpp
components/who_wakeup_word/: CMakeLists.txt  who_wakeup_word.cpp  who_wakeup_word.hpp
examples/camera_sample/: CMakeLists.txt
examples/esp_http_client/: .gitignore  README.md
examples/esp_http_client/main/: CMakeLists.txt  esp_http_client_example.c
examples/human_face_recognition/main/: idf_component.yml
